[package]
name = "bun_analytics"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
strum.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_core.workspace = true
bun_semver.workspace = true
bun_sys.workspace = true
thiserror.workspace = true
bun_errno.workspace = true
