[package]
name = "bun_ast"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bytemuck = "1"
strum.workspace = true
phf.workspace = true
bstr.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
bitflags.workspace = true
bun_alloc.workspace = true
bun_dispatch.workspace = true
bun_core.workspace = true
bun_ptr.workspace = true
bun_paths.workspace = true
bun_collections.workspace = true
bun_sys.workspace = true
bun_wyhash.workspace = true
