[package]
name = "bun_base64"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_core.workspace = true

thiserror.workspace = true

bun_simdutf_sys.workspace = true
bun_collections.workspace = true
# `wyhash_url_safe` (CSS-modules / dependency placeholder hasher) — leaf crates,
# no cycle.
bun_wyhash.workspace = true
bumpalo.workspace = true
bun_alloc.workspace = true
