[package]
name = "bun_boringssl"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
scopeguard.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
bun_boringssl_sys.workspace = true
bun_cares_sys.workspace = true
