[package]
name = "bun_boringssl"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
# lib.rs is #[path]-mounted into `bun_crypto`; only that compilation should
# emit the OPENSSL_memory_* #[no_mangle] hooks. Default-on here so the
# standalone crate suppresses them and the link sees exactly one definition.
default = ["suppress_no_mangle"]
suppress_no_mangle = []

[lints]
workspace = true

[dependencies]
strum.workspace = true
bstr.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
bun_boringssl_sys.workspace = true
