[package]
name = "bun_alloc"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

# `bun_asan` is set via RUSTFLAGS (`--cfg=bun_asan`) by scripts/build/rust.ts
# when building with address sanitizer; it is not a Cargo feature.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bun_asan)'] }

[dependencies]
bun_opaque.workspace = true
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true


allocator-api2.workspace = true

bun_mimalloc_sys.workspace = true
bun_wyhash.workspace = true
bumpalo.workspace = true
typed-arena.workspace = true
