[package]
name = "bun_alloc"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bun_opaque.workspace = true
libc.workspace = true


allocator-api2.workspace = true

bun_mimalloc_sys.workspace = true
bun_wyhash.workspace = true
bumpalo.workspace = true
typed-arena.workspace = true
