[package]
name = "bun_bin"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "bun-rs"
path = "main.rs"

[dependencies]
libc.workspace = true

# Core crates that currently compile green and contain extern-"C" surface
# the C/C++ side links against (Bun__StackCheck__*, Output sink, mimalloc
# global allocator, crash handler hooks).
bun_alloc.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
bun_crash_handler.workspace = true
bun_mimalloc_sys.workspace = true

# TODO(phase-c): re-enable once their B-2 compile errors are fixed. The
# `main()` body wants `bun_runtime::cli::Cli::start()` and the JSC bridge,
# but pulling them in today aborts the build before the link step we are
# trying to exercise here.
# bun_runtime.workspace = true
# bun_jsc.workspace = true

[build-dependencies]
# none — build.rs only needs std (fs/path/glob via read_dir).
