[package]
name = "bun_bin"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "bun-rs"
path = "main.rs"

[dependencies]
libc.workspace = true

# Core crates that currently compile green and contain extern-"C" surface
# the C/C++ side links against (Bun__StackCheck__*, Output sink, mimalloc
# global allocator, crash handler hooks).
bun_alloc.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
bun_crash_handler.workspace = true
bun_mimalloc_sys.workspace = true
bun_platform.workspace = true

# Phase-C: bun_runtime now compiles green; pulled in for `Cli::start()`.
# bun_jsc remains gated until the JSC bridge links.
# default-features = false: keep bun_css off the `bun-rs -e` path.
bun_runtime = { workspace = true, default-features = false }
# bun_jsc.workspace = true

[build-dependencies]
# none — build.rs only needs std (fs/path/glob via read_dir).
