[package]
name = "bun_core"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bytemuck = "1"
itoa.workspace = true
bun_opaque.workspace = true
strum.workspace = true
bstr.workspace = true
const_format.workspace = true
libc.workspace = true
bun_macros.workspace = true
bun_output_tags.workspace = true
thiserror.workspace = true
# Step 3.1 mounts:
scopeguard.workspace = true
enum-map.workspace = true
enumset.workspace = true
bitflags.workspace = true
allocator-api2.workspace = true
bumpalo.workspace = true
typed-arena.workspace = true
hashbrown = { workspace = true, features = ["raw-entry"] }
smallvec = { workspace = true, features = ["const_generics", "union"] }
paste = "1"
rustc-hash = "2"

[target.'cfg(windows)'.dependencies]
bun_windows_sys.workspace = true
