[package]
name = "bun_bundler"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
parking_lot.workspace = true
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
bumpalo.workspace = true
typed-arena.workspace = true
bun_base64.workspace = true
bun_alloc.workspace = true
# TODO(b2-blocked): bun_analytics / bun_resolve_builtins / bun_resolver — adding
# these triggers a fresh build of upstream crates (css/logger/js_parser) which
# have in-progress uncommitted breakage in the working tree. Re-add once the
# tree is green; usages in options.rs are gated or stubbed locally.
# bun_analytics.workspace = true
bun_resolver.workspace = true
# bun_resolve_builtins.workspace = true
bun_core.workspace = true
bun_collections.workspace = true
bun_crash_handler.workspace = true
# bun_css — needed by Chunk.rs/ParseTask.rs/LinkerContext.rs (un-gated B-2: css
# calc lattice now real). Optional so the crate can still typecheck while a
# concurrent agent has src/css/ mid-edit; enabled by default via the `css`
# feature below.
bun_css = { workspace = true, optional = true }
bun_dotenv.workspace = true
bun_event_loop.workspace = true
bun_glob.workspace = true
bun_http_types.workspace = true
bun_interchange.workspace = true
bun_io.workspace = true
bun_js_parser.workspace = true
bun_js_printer.workspace = true
bun_logger.workspace = true
bun_md.workspace = true
bun_options_types.workspace = true
bun_paths.workspace = true
bun_perf.workspace = true
bun_router.workspace = true
bun_sourcemap.workspace = true
bun_string.workspace = true
bun_sys.workspace = true
bun_threading.workspace = true
bun_url.workspace = true
bun_wyhash.workspace = true
# `bundle_v2.zig:ContentHasher` uses `std.hash.XxHash64`; the wyhash stand-in
# in ungate_support.rs produced different `chunk.isolated_hash` / `[hash]`
# placeholder values than the spec. Streaming xxh64 (matching the gated
# `bundle_v2::__phase_a_draft::ContentHasher`).
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[features]
default = ["css"]
css = ["dep:bun_css"]
debug_logs = []
show_crash_trace = []
