[package]
name = "bun_bundler"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bytemuck = "1"
bun_opaque.workspace = true
bun_macros.workspace = true
strum.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
bumpalo.workspace = true
typed-arena.workspace = true
bun_resolver.workspace = true
# `bun_resolve_builtins` only depends on `bun_options_types` + `bun_string`
# (both already in this graph), so no cycle.
bun_resolve_builtins.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
# bun_css — needed by Chunk.rs/ParseTask.rs/LinkerContext.rs. Unconditional:
# `bun_js_parser` (an unconditional dep below) already pulls in `bun_css`
# unconditionally for `BundledAst.css`'s field type, so there is no compile-time
# saving to be had by gating it.
bun_css.workspace = true
bun_dotenv.workspace = true
bun_loop.workspace = true
bun_parsers.workspace = true
bun_js.workspace = true
bun_ast.workspace = true
lol_html.workspace = true
bun_md.workspace = true
bun_options_types.workspace = true
bun_router.workspace = true
bun_sourcemap.workspace = true
# `bundle_v2.rs:ContentHasher` uses xxh64. Streaming xxh64 comes
# from `bun_hash::XxHash64Streaming` (the C++/Highway kernel) so the workspace
# has exactly one xxhash implementation.

[features]
default = []
debug_logs = []
show_crash_trace = ["bun_sys/show_crash_trace"]
