[package]
name = "bun_bundler_jsc"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
parking_lot.workspace = true
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_aio.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true
bun_bundler.workspace = true
bun_logger.workspace = true
bun_options_types.workspace = true
bun_paths.workspace = true
bun_ptr.workspace = true
bun_string.workspace = true
bun_sys.workspace = true
bun_threading.workspace = true
bun_transpiler.workspace = true
