[package]
name = "bun_bundler_jsc"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bun_opaque.workspace = true
bstr.workspace = true
scopeguard.workspace = true
bun_core.workspace = true
bun_bundler.workspace = true
bun_ast.workspace = true
bun_options_types.workspace = true
bun_resolver.workspace = true
bun_jsc.workspace = true
