[package]
name = "bun_cares_sys"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bun_opaque.workspace = true
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true

thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
bun_libuv_sys.workspace = true
