[package]
name = "bun_cares_sys"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bun_opaque.workspace = true
strum.workspace = true
libc.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true

[target.'cfg(windows)'.dependencies]
bun_libuv_sys.workspace = true
