[package]
name = "bun_clap"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
bun_clap_macros.workspace = true
bun_core.workspace = true
