[package]
name = "bun_clap_macros"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
# Shared `<tag>` → ANSI colour table — `#![no_std]`, zero-dep leaf, the same
# one `bun_core_macros::pretty_fmt!` uses. Lets `parse_param!` bake the
# colour-rewritten description forms into rodata at expansion time.
bun_output_tags.workspace = true
