[package]
name = "bun_collections"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
strum.workspace = true
# `raw-entry` powers `StringHashMap::{get_hashed, put_static_key_hashed}` — the
# precomputed-hash probe/insert path the resolver's `DirEntry::add_entry` hot
# loop uses so it hashes each basename once instead of on every lookup + insert.
hashbrown = { workspace = true, features = ["raw-entry"] }
# Direct dep purely so its `nightly` feature unifies — makes hashbrown's
# `Allocator` bound a re-export of `core::alloc::Allocator` instead of the
# polyfill trait, so `bun_alloc::AstAlloc` (which only implements the real
# one) can back `StringHashMap<_, AstAlloc>`. See workspace `Cargo.toml`
# hashbrown comment for why we don't use hashbrown's own `nightly` feature.
allocator-api2.workspace = true
smallvec = { workspace = true, features = ["const_generics", "union"] }
paste = "1"
bun_alloc.workspace = true
bun_core.workspace = true
bun_wyhash.workspace = true
bun_ptr.workspace = true

thiserror.workspace = true

bun_simdutf_sys.workspace = true
