[package]
name = "bun_collections"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
# `raw-entry` powers `StringHashMap::{get_hashed, put_static_key_hashed}` — the
# precomputed-hash probe/insert path the resolver's `DirEntry::add_entry` hot
# loop uses so it hashes each basename once instead of on every lookup + insert.
hashbrown = { workspace = true, features = ["raw-entry"] }
smallvec = { workspace = true, features = ["const_generics", "union"] }
paste = "1"
bun_alloc.workspace = true
bun_core.workspace = true
bun_wyhash.workspace = true
bun_ptr.workspace = true

bun_simdutf_sys.workspace = true
