[package]
name = "bun_crypto"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
bun_opaque.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
strum.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
bytemuck = "1"
