[package]
name = "bun_crypto"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
# Declared (never enabled) so the cfg gate in the #[path]-mounted
# boringssl/lib.rs is a known cfg here; `bun_boringssl` default-enables it,
# leaving `bun_crypto` as the sole emitter of the OPENSSL_memory_* C symbols.
suppress_no_mangle = []

[lints]
workspace = true

[dependencies]
bun_opaque.workspace = true
bun_core.workspace = true
bun_sys.workspace = true
strum.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
bytemuck = "1"
