[package]
name = "bun_css"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
bitflags.workspace = true
bun_base64.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true
bun_collections.workspace = true
bun_io.workspace = true
bun_ast.workspace = true
bun_paths.workspace = true
bun_ptr.workspace = true
bun_wyhash.workspace = true
bun_css_derive = { path = "../css_derive" }
