[package]
name = "bun_css"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
strum.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bumpalo.workspace = true
typed-arena.workspace = true
bun_core.workspace = true
bun_loop.workspace = true
bun_ast.workspace = true
bun_macros.workspace = true
