[package]
name = "bun_css_jsc"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
parking_lot.workspace = true
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true
bun_bundler.workspace = true
bun_collections.workspace = true
bun_css.workspace = true
bun_js_parser.workspace = true
bun_logger.workspace = true
bun_options_types.workspace = true
bun_string.workspace = true
