[package]
name = "bun_dotenv"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
strum.workspace = true
phf.workspace = true
bstr.workspace = true
scopeguard.workspace = true
const_format.workspace = true
enum-map.workspace = true
enumset.workspace = true
libc.workspace = true
bitflags.workspace = true
bun_alloc.workspace = true
bun_core.workspace = true
bun_dispatch.workspace = true
bun_collections.workspace = true
bun_ast.workspace = true
bun_paths.workspace = true
bun_sys.workspace = true
bun_url.workspace = true
bun_which.workspace = true
bun_wyhash.workspace = true
